* Fixed a macro regression: macro output is visible when macro is collapsed * Fixed getSourceText() to work when the plain text editor is not created * Fixed CSS for in-line mode
Merged from trunk, revision 20746.


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/branches/xwiki-web-1.9@20747 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/menu.css
+++ b/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/menu.css
@@ -23,6 +23,7 @@
   border-collapse: collapse;
   border-spacing: 0;
   padding: 0;
+  margin: 0;
 }
 
 .gwt-MenuBar-horizontal .gwt-MenuItem {
@@ -30,6 +31,7 @@
   color: #666;
   font-weight: bold;
   background-color: #EAEAEA;
+  border: 0 none;
   border-top:1px solid #DDD;
   border-right:1px solid #DDD;
   height: 24px;
